# ie0417-dev

./: .gitignore  Vagrantfile  test.txt
.git-old/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
.git-old/logs/: HEAD
.git-old/objects/pack/: pack-0d28f1d3457d94539d99d9a309f0d532080f20ba.idx  pack-0d28f1d3457d94539d99d9a309f0d532080f20ba.pack  pack-436f70e9a7abc375a33f88252cc4414307374c95.idx  pack-436f70e9a7abc375a33f88252cc4414307374c95.pack  (+5 more)
docs/source/: conf.py  getting-started.rst  index.rst
lab2/eieManager/: README.md  setup.py
proyecto/: README.md  commands.json  docker-compose.yml  eieDevice.h
proyecto/clientDittoRestApi/: external_user_client.py
proyecto/eieDevice2.0/: CMakeLists.txt  README.md  eieDevice.pc.in  utils.cmake
proyecto/eieDevice2.0/include/eieDevice/: eieDevice.h  version.h
proyecto/eieDevice2.0/src/: CMakeLists.txt  eieDevice.c  mqtt.h  version.c.in
proyecto/eieDevice2.0/src/devices/: airQuality.c  airQuality.h
proyecto/eieDevice2.0/test/: CMakeLists.txt  unittest_main.cpp
proyecto/eieDevice2.0/test/tests/: eieDevice.cpp  mqtttest.cpp
proyecto/eieDevice2.0/test/testutil/: rand_gen.cpp
proyecto/eieDevice2.0/test/testutil/include/testutil/: rand_gen.hpp
proyecto/eieDevice2.0/tools/: CMakeLists.txt
proyecto/eieDevice2.0/tools/eie_device/: CMakeLists.txt  main.c
proyecto/eieManager2.0/: commands.json  docker-compose.yml  eieDevice.h
proyecto/image-eie-manager-config/: Dockerfile  create_devices.sh  create_mqtt_connection.sh  create_policy.sh  ditto_config.sh
tools/docker/: Dockerfile
(+129 files in other folders)
